fix: changed generation for built-in generators to correctly generate as per the underlying logic.